tests/negative/test_owning_arr_asgn_owning.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc main () () {
    sym f0:(Foo 2) f1:(Foo 2);
    = f0 f1;
};